--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -7,31 +6,40 @@
   <title>MA – Inteligência Jurídica</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
 
   <!-- Header -->
   <header class="bg-white shadow-md fixed w-full z-50">
-    <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
-          <a href="/">
-      <img src="public/assets/logo.svg"
-           alt="MA – Inteligência Jurídica"
-           style="height:150px; width:auto"/>
-    </a>
+    <div class="max-w-7xl mx-auto flex items-center justify-between py-2 px-6">
+      <a href="/">
+        <img src="public/assets/logo.svg"
+             alt="MA – Inteligência Jurídica"
+             class="h-16 w-auto"/> <!-- 64 px -->
+      </a>
 
-      <nav class="space-x-6">
-        <a href="#servicos" class="hover:text-[#D4AF37]">Serviços</a>
-        <a href="#metodologia" class="hover:text-[#D4AF37]">Metodologia</a>
-        <a href="#sobre" class="hover:text-[#D4AF37]">Quem Somos</a>
-        <a href="#contato" class="hover:text-[#D4AF37]">Contato</a>
+      <nav class="space-x-6 font-semibold text-[#002B5C]">
+        <a href="#servicos"    class="hover:text-[#C5A268]">Serviços</a>
+        <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
+        <a href="#sobre"       class="hover:text-[#C5A268]">Quem Somos</a>
+        <a href="#contato"     class="hover:text-[#C5A268]">Contato</a>
       </nav>
     </div>
   </header>
 
   <!-- Hero -->
-  <section class="pt-32 pb-20 bg-[#A7FFEB] text-[#0F172A] text-center">
+  <section class="pt-32 pb-24 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-4xl font-bold mb-4">Inteligência Jurídica com Propósito</h2>
-      <p class="text-xl">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+      <p class="text-xl max-w-2xl mx-auto">
+        Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias.
+        Técnica, sensibilidade e futuro.
+      </p>
+
+      <a href="https://wa.me/5538984164737"
+         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90 mt-8">
+        Agendar Diagnóstico
+      </a>
     </div>
   </section>
 
@@ -40,15 +48,15 @@
     <div class="max-w-6xl mx-auto">
       <h3 class="text-3xl font-bold mb-10 text-center">Nossos Serviços</h3>
       <div class="grid md:grid-cols-3 gap-10">
-        <div class="bg-[#F8F5F0] p-6 rounded-xl shadow-md">
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
           <h4 class="text-xl font-semibold mb-2">Contratos Empresariais</h4>
           <p>Blindagem, risco e estratégia reunidos em instrumentos contratuais personalizados.</p>
         </div>
-        <div class="bg-[#F8F5F0] p-6 rounded-xl shadow-md">
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
           <h4 class="text-xl font-semibold mb-2">Planejamento Sucessório</h4>
           <p>Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
         </div>
-        <div class="bg-[#F8F5F0] p-6 rounded-xl shadow-md">
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
           <h4 class="text-xl font-semibold mb-2">Governança Familiar</h4>
           <p>Estruturação de acordos, protocolos e governança intergeracional.</p>
         </div>
@@ -60,7 +68,12 @@
   <section id="metodologia" class="py-20 px-6 bg-[#A7FFEB]">
     <div class="max-w-4xl mx-auto text-center">
       <h3 class="text-3xl font-bold mb-6">Nossa Metodologia</h3>
-      <p class="text-lg">Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência em cada entrega jurídica, aliando tecnologia, doutrina e escuta qualificada. Atuamos com agentes inteligentes, curadoria simbólica e planejamento estratégico em todas as frentes da advocacia empresarial e familiar.</p>
+      <p class="text-lg">
+        Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência
+        em cada entrega jurídica, aliando tecnologia, doutrina e escuta qualificada.
+        Atuamos com agentes inteligentes, curadoria simbólica e planejamento estratégico
+        em todas as frentes da advocacia empresarial e familiar.
+      </p>
     </div>
   </section>
 
@@ -68,7 +81,11 @@
   <section id="sobre" class="py-20 px-6 bg-white">
     <div class="max-w-4xl mx-auto text-center">
       <h3 class="text-3xl font-bold mb-6">Quem Somos</h3>
-      <p class="text-lg">A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito, técnica e inteligência artificial aplicada. Liderada por Maurício Alcântara, especialista em direito empresarial e sucessório, nossa equipe atua com excelência e humanidade.</p>
+      <p class="text-lg">
+        A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito,
+        técnica e inteligência artificial aplicada. Liderada por Maurício Alcântara, especialista em direito empresarial e sucessório,
+        nossa equipe atua com excelência e humanidade.
+      </p>
     </div>
   </section>
 
@@ -77,17 +94,26 @@
     <div class="max-w-4xl mx-auto text-center">
       <h3 class="text-3xl font-bold mb-6">Fale Conosco</h3>
       <form class="space-y-6">
-        <input type="text" placeholder="Seu nome" class="w-full p-4 border rounded-xl" />
+        <input type="text"  placeholder="Seu nome"   class="w-full p-4 border rounded-xl" />
         <input type="email" placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" />
         <textarea placeholder="Sua mensagem" class="w-full p-4 border rounded-xl"></textarea>
-        <button type="submit" class="bg-[#0F172A] text-white px-6 py-3 rounded-xl hover:bg-[#D4AF37]">Enviar</button>
+        <button type="submit"
+                class="bg-[#002B5C] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]">
+          Enviar
+        </button>
       </form>
     </div>
   </section>
 
   <!-- Rodapé -->
-  <footer class="bg-[#0F172A] text-white py-6 text-center">
-    <p>&copy; 2025 MA – Inteligência Jurídica. Todos os direitos reservados.</p>
+  <footer class="bg-[#002B5C] text-white text-sm py-6">
+    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between gap-4">
+      <p>© 2025 MA – Inteligência Jurídica<br/>CNPJ 00.000.000/0001-00</p>
+      <p>
+        <a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a><br/>
+        (38) 99999-9999
+      </p>
+    </div>
   </footer>
 
 </body>
