--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
   <!-- Header -->
   <header class="bg-white shadow-md fixed w-full z-50">
-    <div class="max-w-7xl mx-auto flex items-center justify-between py-2 px-6">
+    <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-6">
       <a href="/">
-        <img src="public/assets/logo.svg"
-             alt="MA – Inteligência Jurídica"
-             class="h-24 w-auto"/> <!-- 120 px -->
+       <img src="public/assets/logo.svg"
+     alt="MA – Inteligência Jurídica"
+     class="h-[120px] w-auto"/>  <!-- 120 px ≈ h-30 -->
+
       </a>
 
       <nav class="space-x-6 font-semibold text-[#002B5C]">
