--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   </header>
 
   <!-- Hero -->
-  <section class="pt-32 pb-24 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
+<section class="pt-36 md:pt-40 pb-24 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
+
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-4xl font-bold mb-4">Inteligência Jurídica com Propósito</h2>
       <p class="text-xl max-w-2xl mx-auto">
