--- a/index.html
+++ b/index.html
@@ -1,122 +1,194 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MA – Inteligência Jurídica</title>
+
+  <title data-i18n="title">MA – Inteligência Jurídica</title>
+  <meta name="description" content="Inteligência jurídica aplicada a empresas e famílias empresárias. Contratos, planejamento sucessório e governança familiar.">
+  <link rel="canonical" href="https://malcantara.adv.br/">
+
+  <!-- Open Graph -->
+  <meta property="og:type"        content="website">
+  <meta property="og:title"       content="MA – Inteligência Jurídica">
+  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias.">
+  <meta property="og:url"         content="https://malcantara.adv.br/">
+  <meta property="og:image"       content="https://malcantara.adv.br/public/assets/logo.svg">
+
+  <link rel="icon" href="public/assets/logo.svg" type="image/svg+xml">
+
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- AOS (Animate On Scroll) -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
+  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 </head>
 
 <body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
 
-  <!-- Header -->
+  <!-- HEADER -->
   <header class="bg-white shadow-md fixed w-full z-50">
     <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-6">
       <a href="/">
-       <img src="public/assets/logo.svg"
-     alt="MA – Inteligência Jurídica"
-     class="h-[120px] w-auto"/>  <!-- 120 px ≈ h-30 -->
-
+        <img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto">
       </a>
 
-      <nav class="space-x-6 font-semibold text-[#002B5C]">
-        <a href="#servicos"    class="hover:text-[#C5A268]">Serviços</a>
-        <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
-        <a href="#sobre"       class="hover:text-[#C5A268]">Quem Somos</a>
-        <a href="#contato"     class="hover:text-[#C5A268]">Contato</a>
+      <nav class="space-x-6 font-semibold text-[#002B5C] flex items-center">
+        <a href="#servicos"    class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
+        <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
+        <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
+        <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
+
+        <!-- idioma -->
+        <div class="border-l pl-4 ml-2">
+          <button onclick="setLang('pt')" class="px-1">PT</button> |
+          <button onclick="setLang('en')" class="px-1">EN</button>
+        </div>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
-<section class="pt-36 md:pt-40 pb-24 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
+  <!-- HERO -->
+  <section class="pt-40 pb-24 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
+    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
+      <h1 class="text-4xl font-bold" data-i18n="hero_title">
+        Inteligência Jurídica com Propósito
+      </h1>
 
-    <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-4xl font-bold mb-4">Inteligência Jurídica com Propósito</h2>
-      <p class="text-xl max-w-2xl mx-auto">
+      <p class="text-xl max-w-2xl" data-i18n="hero_sub">
         Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias.
         Técnica, sensibilidade e futuro.
       </p>
 
       <a href="https://wa.me/5538984164737"
-         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90 mt-8">
+         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
+         data-i18n="cta_diag">
         Agendar Diagnóstico
       </a>
     </div>
   </section>
 
-  <!-- Serviços -->
+  <!-- SERVIÇOS -->
   <section id="servicos" class="py-20 px-6 bg-white">
     <div class="max-w-6xl mx-auto">
-      <h3 class="text-3xl font-bold mb-10 text-center">Nossos Serviços</h3>
+      <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="services_title">Nossos Serviços</h2>
+
       <div class="grid md:grid-cols-3 gap-10">
-        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
-          <h4 class="text-xl font-semibold mb-2">Contratos Empresariais</h4>
-          <p>Blindagem, risco e estratégia reunidos em instrumentos contratuais personalizados.</p>
+
+        <!-- Card 1 -->
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up">
+          <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M16 2H8a2 2 0 0 0-2 2v16l6-3 6 3V4a2 2 0 0 0-2-2Z"/>
+            </svg>
+          </div>
+          <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
+          <p data-i18n="service_contracts_p">
+            Blindagem, risco e estratégia reunidos em instrumentos contratuais personalizados.
+          </p>
         </div>
-        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
-          <h4 class="text-xl font-semibold mb-2">Planejamento Sucessório</h4>
-          <p>Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
+
+        <!-- Card 2 -->
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="100">
+          <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12 7a5 5 0 1 0 0-2 5 5 0 0 0 0 2Zm7 6a7 7 0 0 1-14 0H3a9 9 0 0 0 18 0Z"/>
+            </svg>
+          </div>
+          <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
+          <p data-i18n="service_succession_p">
+            Organização patrimonial e sucessão harmônica com foco na perenidade familiar.
+          </p>
         </div>
-        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
-          <h4 class="text-xl font-semibold mb-2">Governança Familiar</h4>
-          <p>Estruturação de acordos, protocolos e governança intergeracional.</p>
+
+        <!-- Card 3 -->
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="200">
+          <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M4 4h16v2H4zm2 4h12v2H6zm4 4h8v2h-8zm2 4h4v2h-4z"/>
+            </svg>
+          </div>
+          <h3 class="text-xl font-semibold mb-2" data-i18n="service_governance_h">Governança Familiar</h3>
+          <p data-i18n="service_governance_p">
+            Estruturação de acordos, protocolos e governança intergeracional.
+          </p>
         </div>
+
       </div>
     </div>
   </section>
 
-  <!-- Metodologia -->
+  <!-- METODOLOGIA -->
   <section id="metodologia" class="py-20 px-6 bg-[#A7FFEB]">
-    <div class="max-w-4xl mx-auto text-center">
-      <h3 class="text-3xl font-bold mb-6">Nossa Metodologia</h3>
-      <p class="text-lg">
+    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6" data-i18n="method_title">Nossa Metodologia</h2>
+      <p class="text-lg" data-i18n="method_text">
         Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência
-        em cada entrega jurídica, aliando tecnologia, doutrina e escuta qualificada.
-        Atuamos com agentes inteligentes, curadoria simbólica e planejamento estratégico
-        em todas as frentes da advocacia empresarial e familiar.
+        em cada entrega jurídica, aliando tecnologia, doutrina e escuta qualificada...
       </p>
     </div>
   </section>
 
-  <!-- Quem Somos -->
+  <!-- SOBRE -->
   <section id="sobre" class="py-20 px-6 bg-white">
-    <div class="max-w-4xl mx-auto text-center">
-      <h3 class="text-3xl font-bold mb-6">Quem Somos</h3>
-      <p class="text-lg">
-        A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito,
-        técnica e inteligência artificial aplicada. Liderada por Maurício Alcântara, especialista em direito empresarial e sucessório,
-        nossa equipe atua com excelência e humanidade.
+    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6" data-i18n="about_title">Quem Somos</h2>
+      <p class="text-lg" data-i18n="about_text">
+        A MA nasceu para romper com a advocacia genérica...
       </p>
     </div>
   </section>
 
-  <!-- Contato -->
+  <!-- CONTATO -->
   <section id="contato" class="py-20 px-6 bg-[#F8F5F0]">
-    <div class="max-w-4xl mx-auto text-center">
-      <h3 class="text-3xl font-bold mb-6">Fale Conosco</h3>
+    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6" data-i18n="contact_title">Fale Conosco</h2>
+
       <form class="space-y-6">
-        <input type="text"  placeholder="Seu nome"   class="w-full p-4 border rounded-xl" />
-        <input type="email" placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" />
-        <textarea placeholder="Sua mensagem" class="w-full p-4 border rounded-xl"></textarea>
+        <input type="text"  placeholder="Seu nome"   class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name">
+        <input type="email" placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email">
+        <textarea placeholder="Sua mensagem" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
+
         <button type="submit"
-                class="bg-[#002B5C] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]">
+                class="bg-[#002B5C] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]"
+                data-i18n="contact_send">
           Enviar
         </button>
       </form>
     </div>
   </section>
 
-  <!-- Rodapé -->
+  <!-- RODAPÉ -->
   <footer class="bg-[#002B5C] text-white text-sm py-6">
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between gap-4">
-      <p>© 2025 MA – Inteligência Jurídica<br/>CNPJ 00.000.000/0001-00</p>
+      <p>© 2025 MA – Inteligência Jurídica<br>CNPJ 00.000.000/0001-00</p>
       <p>
-        <a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a><br/>
+        <a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a><br>
         (38) 99999-9999
       </p>
     </div>
   </footer>
+
+  <!-- i18n loader + AOS init -->
+  <script>
+    function setLang(l){localStorage.setItem('lang',l);location.reload();}
+    (async()=>{
+      const lang=localStorage.getItem('lang')||'pt';
+      document.documentElement.lang=lang;
+      try{
+        const tr=await fetch(`/i18n/${lang}.json`).then(r=>r.json());
+        document.querySelectorAll('[data-i18n]').forEach(el=>{
+          el.textContent=tr[el.dataset.i18n]||el.textContent;
+        });
+        document.querySelectorAll('[data-i18n-placeholder]').forEach(el=>{
+          const k=el.dataset.i18nPlaceholder;
+          if(tr[k])el.placeholder=tr[k];
+        });
+      }catch(e){console.warn('i18n error',e);}
+    })();
+    AOS.init({duration:700,once:true});
+  </script>
 
 </body>
 </html>
