--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title data-i18n="title">MA – Inteligência Jurídica</title>
-  <meta name="description" content="Inteligência jurídica aplicada a empresas e famílias empresárias. Contratos, planejamento sucessório e governança familiar.">
+  <meta name="description" content="Inteligência jurídica aplicada a empresas e famílias empresárias.">
   <link rel="canonical" href="https://malcantara.adv.br/">
 
   <!-- Open Graph -->
@@ -17,12 +17,21 @@
 
   <link rel="icon" href="public/assets/logo.svg" type="image/svg+xml">
 
-  <!-- Tailwind CDN -->
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- AOS (Animate On Scroll) -->
+  <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
 </head>
 
 <body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
@@ -40,7 +49,7 @@
         <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
         <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
 
-        <!-- idioma -->
+        <!-- switch PT | EN -->
         <div class="border-l pl-4 ml-2">
           <button onclick="setLang('pt')" class="px-1">PT</button> |
           <button onclick="setLang('en')" class="px-1">EN</button>
@@ -84,9 +93,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
-          <p data-i18n="service_contracts_p">
-            Blindagem, risco e estratégia reunidos em instrumentos contratuais personalizados.
-          </p>
+          <p data-i18n="service_contracts_p">Blindagem, risco e estratégia reunidos em instrumentos contratuais personalizados.</p>
         </div>
 
         <!-- Card 2 -->
@@ -97,9 +104,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
-          <p data-i18n="service_succession_p">
-            Organização patrimonial e sucessão harmônica com foco na perenidade familiar.
-          </p>
+          <p data-i18n="service_succession_p">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
         </div>
 
         <!-- Card 3 -->
@@ -110,9 +115,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_governance_h">Governança Familiar</h3>
-          <p data-i18n="service_governance_p">
-            Estruturação de acordos, protocolos e governança intergeracional.
-          </p>
+          <p data-i18n="service_governance_p">Estruturação de acordos, protocolos e governança intergeracional.</p>
         </div>
 
       </div>
@@ -124,8 +127,7 @@
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="method_title">Nossa Metodologia</h2>
       <p class="text-lg" data-i18n="method_text">
-        Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência
-        em cada entrega jurídica, aliando tecnologia, doutrina e escuta qualificada...
+        Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência...
       </p>
     </div>
   </section>
@@ -144,12 +146,13 @@
   <section id="contato" class="py-20 px-6 bg-[#F8F5F0]">
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="contact_title">Fale Conosco</h2>
-
-      <form class="space-y-6">
-        <input type="text"  placeholder="Seu nome"   class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name">
-        <input type="email" placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email">
-        <textarea placeholder="Sua mensagem" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
-
+      <form action="https://formspree.io/f/SEU_ID" method="POST" class="space-y-6">
+        <input name="nome"    type="text"  required placeholder="Seu nome"
+               class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name">
+        <input name="email"   type="email" required placeholder="Seu e-mail"
+               class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email">
+        <textarea name="mensagem" required placeholder="Sua mensagem"
+                  class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
         <button type="submit"
                 class="bg-[#002B5C] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]"
                 data-i18n="contact_send">
@@ -172,22 +175,30 @@
 
   <!-- i18n loader + AOS init -->
   <script>
-    function setLang(l){localStorage.setItem('lang',l);location.reload();}
-    (async()=>{
-      const lang=localStorage.getItem('lang')||'pt';
-      document.documentElement.lang=lang;
-      try{
-        const tr=await fetch(`/i18n/${lang}.json`).then(r=>r.json());
-        document.querySelectorAll('[data-i18n]').forEach(el=>{
-          el.textContent=tr[el.dataset.i18n]||el.textContent;
+    function setLang(l){ localStorage.setItem('lang',l); location.reload(); }
+
+    window.addEventListener('DOMContentLoaded', async () => {
+      const lang = localStorage.getItem('lang') || 'pt';
+      document.documentElement.lang = lang;
+
+      try {
+        const res = await fetch('./i18n/' + lang + '.json');
+        const tr  = await res.json();
+
+        document.querySelectorAll('[data-i18n]').forEach(el => {
+          const k = el.dataset.i18n;
+          if (tr[k]) el.textContent = tr[k];
         });
-        document.querySelectorAll('[data-i18n-placeholder]').forEach(el=>{
-          const k=el.dataset.i18nPlaceholder;
-          if(tr[k])el.placeholder=tr[k];
+        document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+          const k = el.dataset.i18nPlaceholder;
+          if (tr[k]) el.placeholder = tr[k];
         });
-      }catch(e){console.warn('i18n error',e);}
-    })();
-    AOS.init({duration:700,once:true});
+      } catch (e) {
+        console.warn('i18n error', e);
+      }
+
+      AOS.init({duration: 700, once: true});
+    });
   </script>
 
 </body>
