--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
         <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
         <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
-        <a href="/blog.html"   class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
+        <!-- CORRIGIDO: sem barra inicial -->
+        <a href="blog.html"    class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
         <div class="border-l pl-4 ml-2">
           <button onclick="setLang('pt')" class="px-1">PT</button> |
           <button onclick="setLang('en')" class="px-1">EN</button>
