--- a/index.html
+++ b/index.html
@@ -35,10 +35,36 @@
 
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-FNXCNKTCY5');</script>
+  <script>
+    window.dataLayer=window.dataLayer||[];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js',new Date());
+    gtag('config','G-FNXCNKTCY5');
+  </script>
 
   <!-- JSON-LD -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"LegalService","name":"MA – Inteligência Jurídica","url":"https://malcantara.adv.br/","logo":"https://malcantara.adv.br/public/assets/logo.svg","image":"https://malcantara.adv.br/public/assets/logo.svg","description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.","telephone":"+55-38-98416-4737","email":"contato@malcantara.adv.br","address":{"@type":"PostalAddress","streetAddress":"Rua Áustria, 61 – Ibituruna","addressLocality":"Montes Claros","addressRegion":"MG","postalCode":"39402-145","addressCountry":"BR"},"founder":{"@type":"Person","name":"Maurício Alcântara"}}</script>
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"LegalService",
+    "name":"MA – Inteligência Jurídica",
+    "url":"https://malcantara.adv.br/",
+    "logo":"https://malcantara.adv.br/public/assets/logo.svg",
+    "image":"https://malcantara.adv.br/public/assets/logo.svg",
+    "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
+    "telephone":"+55-38-98416-4737",
+    "email":"contato@malcantara.adv.br",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"Rua Áustria, 61 – Ibituruna",
+      "addressLocality":"Montes Claros",
+      "addressRegion":"MG",
+      "postalCode":"39402-145",
+      "addressCountry":"BR"
+    },
+    "founder":{"@type":"Person","name":"Maurício Alcântara"}
+  }
+  </script>
 </head>
 
 <body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
@@ -50,11 +76,11 @@
 
       <nav class="space-x-6 font-semibold text-[#002B5C] flex items-center">
         <a href="#servicos"    class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
-        <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
-        <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
-        <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
-        <!-- CORRIGIDO: sem barra inicial -->
-        <a href="blog.html"    class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
+        <a href="#metodologia"  class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
+        <a href="#sobre"        class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
+        <a href="#contato"      class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
+        <!-- abre em nova guia -->
+        <a href="blog.html" target="_blank" rel="noopener" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
         <div class="border-l pl-4 ml-2">
           <button onclick="setLang('pt')" class="px-1">PT</button> |
           <button onclick="setLang('en')" class="px-1">EN</button>
@@ -68,7 +94,9 @@
     <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
       <h1 class="text-4xl font-bold" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
       <p class="text-xl max-w-2xl" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
-      <a href="https://wa.me/5538984164737" class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90" data-i18n="cta_diag">Agendar Diagnóstico</a>
+      <a href="https://wa.me/5538984164737"
+         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
+         data-i18n="cta_diag">Agendar Diagnóstico</a>
     </div>
   </section>
 
@@ -77,26 +105,32 @@
     <div class="max-w-6xl mx-auto">
       <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="services_title">Nossos Serviços</h2>
       <div class="grid md:grid-cols-3 gap-10">
-        <!-- card 1 -->
+        <!-- Contratos -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
-            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24"><path d="M16 2H8a2 2 0 0 0-2 2v16l6-3 6 3V4a2 2 0 0 0-2-2Z"/></svg>
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M16 2H8a2 2 0 0 0-2 2v16l6-3 6 3V4a2 2 0 0 0-2-2Z"/>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
           <p data-i18n="service_contracts_p">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
         </div>
-        <!-- card 2 -->
+        <!-- Sucessão -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="100">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
-            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24"><path d="M12 7a5 5 0 1 0 0-2 5 5 0 0 0 0 2Zm7 6a7 7 0 0 1-14 0H3a9 9 0 0 0 18 0Z"/></svg>
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12 7a5 5 0 1 0 0-2 5 5 0 0 0 0 2Zm7 6a7 7 0 0 1-14 0H3a9 9 0 0 0 18 0Z"/>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
           <p data-i18n="service_succession_p">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
         </div>
-        <!-- card 3 -->
+        <!-- Governança -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="200">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
-            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24"><path d="M4 4h16v2H4zm2 4h12v2H6zm4 4h8v2h-8zm2 4h4v2h-4z"/></svg>
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M4 4h16v2H4zm2 4h12v2H6zm4 4h8v2h-8zm2 4h4v2h-4z"/>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_governance_h">Governança Familiar</h3>
           <p data-i18n="service_governance_p">Estruturação de acordos, protocolos e governança intergeracional.</p>
@@ -152,15 +186,26 @@
 
   <!-- i18n + AOS -->
   <script>
-    function setLang(l){localStorage.setItem('lang',l);location.reload();}
+    function setLang(l){
+      localStorage.setItem('lang',l);
+      location.reload();
+    }
     window.addEventListener('DOMContentLoaded', async () => {
-      const lang = localStorage.getItem('lang') || 'pt';
+      const lang = (localStorage.getItem('lang')||'pt').slice(0,2);
       document.documentElement.lang = lang;
-      try{
-        const tr = await fetch('./i18n/'+lang+'.json').then(r=>r.json());
-        document.querySelectorAll('[data-i18n]').forEach(el=>{const k=el.dataset.i18n;if(tr[k])el.textContent=tr[k];});
-        document.querySelectorAll('[data-i18n-placeholder]').forEach(el=>{const k=el.dataset.i18nPlaceholder;if(tr[k])el.placeholder=tr[k];});
-      }catch(e){console.warn('i18n error',e);}
+      try {
+        const tr = await fetch('/i18n/'+lang+'.json').then(r=>r.json());
+        document.querySelectorAll('[data-i18n]').forEach(el=>{
+          const k=el.dataset.i18n;
+          if (tr[k]) el.textContent=tr[k];
+        });
+        document.querySelectorAll('[data-i18n-placeholder]').forEach(el=>{
+          const k=el.dataset.i18nPlaceholder;
+          if (tr[k]) el.placeholder=tr[k];
+        });
+      } catch(e) {
+        console.warn('i18n error',e);
+      }
       AOS.init({duration:700,once:true});
     });
   </script>
