--- a/index.html
+++ b/index.html
@@ -91,13 +91,29 @@
   </header>
 
   <!-- HERO -->
-  <section class="pt-32 pb-16 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
-    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
-      <h1 class="text-4xl font-bold" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
-      <p class="text-xl max-w-2xl" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
-      <a href="https://wa.me/5538984164737"
-         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
-         data-i18n="cta_diag">Agendar Diagnóstico</a>
+    <!-- HERO (imagem de fundo no lugar do gradiente) -->
+  <section
+    class="pt-32 pb-16 bg-cover bg-center text-white text-center"
+    style="background-image: url('public/assets/banner.jpg');"
+  >
+    <div
+      class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6 backdrop-brightness-75 py-16"
+      data-aos="fade-down"
+    >
+      <h1 class="text-4xl font-bold" data-i18n="hero_title">
+        Inteligência Jurídica com Propósito
+      </h1>
+      <p class="text-xl max-w-2xl" data-i18n="hero_sub">
+        Transformamos conhecimento jurídico em estratégias reais para
+        empresas e famílias empresárias. Técnica, sensibilidade e futuro.
+      </p>
+      <a
+        href="https://wa.me/5538984164737"
+        class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
+        data-i18n="cta_diag"
+      >
+        Agendar Diagnóstico
+      </a>
     </div>
   </section>
 
