--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <meta property="og:title" content="MA – Inteligência Jurídica" />
   <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
   <meta property="og:url" content="https://malcantara.adv.br/" />
-  <meta property="og:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+  <meta property="og:image" content="https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg" />
   <meta property="og:locale" content="pt_BR" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="MA – Inteligência Jurídica" />
   <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
-  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg" />
 
   <!-- Performance -->
   <link rel="preconnect" href="https://www.googletagmanager.com" />
@@ -66,56 +66,127 @@
   }
   </script>
 </head>
+<body class="bg-[#F8F5F0] text-[#0F172A] font-sans scroll-smooth">
 
-<body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
-  <div class="fixed top-4 right-4 z-50 bg-white shadow-md rounded-md px-4 py-2 text-sm">
-    <button onclick="setLang('en')" class="hover:text-[#C5A268] font-semibold">EN</button>
+<!-- Botão WhatsApp -->
+<a href="https://wa.me/5538984164737" class="fixed bottom-5 right-5 z-50 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg transition">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16.24 10.47a6.5 6.5 0 11-9.19 0m0 0a6.5 6.5 0 009.19 0z" />
+  </svg>
+</a>
+
+<!-- Header fixo -->
+<header class="fixed top-0 w-full z-40 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
+  <img src="public/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-12 w-auto" />
+  <nav class="hidden md:flex gap-6 text-sm font-semibold">
+    <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
+    <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
+    <a href="#missao" class="hover:text-[#C5A268]">Missão</a>
+    <a href="#contato" class="hover:text-[#C5A268]">Contato</a>
+    <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
+  </nav>
+</header>
+
+<div class="pt-32">
+  <!-- Hero e outras seções existentes aqui -->
+</div>
+
+<!-- Missão -->
+<section id="missao" class="py-24 px-6 bg-[#F8F5F0] text-center" data-aos="fade-up">
+  <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#0C2A52]">Nossa Missão</h2>
+  <p class="max-w-3xl mx-auto text-lg text-[#1E293B] leading-relaxed">
+    A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica. Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.
+  </p>
+</section>
+
+<!-- Serviços em Cards -->
+<section id="servicos" class="py-24 px-6 bg-white">
+  <div class="text-center mb-12" data-aos="fade-up">
+    <h2 class="text-3xl md:text-4xl font-bold text-[#0C2A52]">Nossos Serviços</h2>
   </div>
-
-  <!-- LOGO HEADER FIXO -->
-  <header class="absolute top-6 left-6 z-40">
-    <img src="public/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-20 w-auto" />
-  </header>
-
-  <!-- HERO -->
-  <section class="pt-36 pb-20 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white text-center">
-    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
-      <h1 class="text-4xl md:text-5xl font-bold leading-tight" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
-      <p class="text-xl md:text-2xl max-w-2xl leading-relaxed" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
-      <a href="https://wa.me/5538984164737" class="mt-6 inline-block bg-[#C5A268] text-white font-semibold px-8 py-3 rounded-xl hover:brightness-90 transition" data-i18n="cta_diag">Agendar Diagnóstico</a>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto" data-aos="fade-up">
+    <div class="bg-[#F8F5F0] rounded-lg p-6 shadow hover:shadow-xl transition">
+      <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Contratos Empresariais</h3>
+      <p class="text-sm text-[#334155]">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
     </div>
-  </section>
-
-  <!-- MISSÃO -->
-  <section class="bg-[#F8F5F0] py-24">
-    <div class="max-w-5xl mx-auto px-6 text-center" data-aos="fade-up">
-      <h2 class="text-3xl md:text-4xl font-bold text-[#0C2A52] mb-6">Nossa Missão</h2>
-      <p class="text-lg leading-relaxed text-[#1E293B] max-w-3xl mx-auto">
-        Romper com a advocacia genérica e estabelecer uma nova ordem jurídica cognitiva, na qual o conhecimento estratégico, a verdade sensível e a personalização das soluções formam o núcleo de atuação da MA – Inteligência Jurídica. Nosso compromisso é com o que é real, perene e transformador para famílias empresárias e empresas que desejam ir além.
-      </p>
+    <div class="bg-[#F8F5F0] rounded-lg p-6 shadow hover:shadow-xl transition">
+      <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Planejamento Sucessório</h3>
+      <p class="text-sm text-[#334155]">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
     </div>
-  </section>
+    <div class="bg-[#F8F5F0] rounded-lg p-6 shadow hover:shadow-xl transition">
+      <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Governança Familiar</h3>
+      <p class="text-sm text-[#334155]">Estruturação de acordos, protocolos e governança intergeracional.</p>
+    </div>
+  </div>
+</section>
 
-  <script>
-    function setLang(l){ localStorage.setItem('lang', l); location.reload(); }
-    window.addEventListener('DOMContentLoaded', async () => {
-      const lang = localStorage.getItem('lang') || 'pt';
-      document.documentElement.lang = lang;
-      try {
-        const tr = await fetch('./i18n/' + lang + '.json').then(r => r.json());
-        document.querySelectorAll('[data-i18n]').forEach(el => {
-          const k = el.dataset.i18n;
-          if (tr[k]) el.textContent = tr[k];
-        });
-        document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
-          const k = el.dataset.i18nPlaceholder;
-          if (tr[k]) el.placeholder = tr[k];
-        });
-      } catch(e) {
-        console.warn('i18n error', e);
-      }
-      AOS.init({ duration: 700, once: true });
-    });
-  </script>
+<!-- Insights / Blog -->
+<section class="py-24 px-6 bg-[#F8F5F0]">
+  <div class="text-center mb-12" data-aos="fade-up">
+    <h2 class="text-3xl md:text-4xl font-bold text-[#0C2A52]">Insights</h2>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto" data-aos="fade-up">
+    <div class="bg-white rounded-lg p-6 shadow hover:shadow-lg transition">
+      <h3 class="font-semibold text-lg text-[#0C2A52] mb-2">O verdadeiro custo de uma holding mal feita</h3>
+      <p class="text-sm text-[#334155]">Quando economizar sai caro: riscos e impactos de estruturas mal planejadas.</p>
+      <a href="/blog/holding-mal-feita" class="text-[#C5A268] text-sm font-medium mt-2 inline-block">Ler mais →</a>
+    </div>
+    <div class="bg-white rounded-lg p-6 shadow hover:shadow-lg transition">
+      <h3 class="font-semibold text-lg text-[#0C2A52] mb-2">Blindagem ou verdade estratégica?</h3>
+      <p class="text-sm text-[#334155]">Como comunicar soluções jurídicas com ética e sofisticação.</p>
+      <a href="/blog/blindagem-ou-verdade" class="text-[#C5A268] text-sm font-medium mt-2 inline-block">Ler mais →</a>
+    </div>
+    <div class="bg-white rounded-lg p-6 shadow hover:shadow-lg transition">
+      <h3 class="font-semibold text-lg text-[#0C2A52] mb-2">Sucessão patrimonial na prática</h3>
+      <p class="text-sm text-[#334155]">Estratégias reais para preservar empresas familiares ao longo do tempo.</p>
+      <a href="/blog/sucessao-na-pratica" class="text-[#C5A268] text-sm font-medium mt-2 inline-block">Ler mais →</a>
+    </div>
+  </div>
+</section>
+
+<!-- Rodapé -->
+<footer id="contato" class="bg-[#0C2A52] text-white py-12 px-6">
+  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
+    <div>
+      <h4 class="font-semibold text-lg mb-2">Endereço</h4>
+      <p>Rua Áustria, 61 – Ibituruna<br>Montes Claros/MG – 39402-145</p>
+    </div>
+    <div>
+      <h4 class="font-semibold text-lg mb-2">Contato</h4>
+      <p>Email: contato@malcantara.adv.br<br>WhatsApp: (38) 98416-4737</p>
+    </div>
+    <div>
+      <h4 class="font-semibold text-lg mb-2">Navegação</h4>
+      <ul class="space-y-1 text-sm">
+        <li><a href="#servicos" class="hover:underline">Serviços</a></li>
+        <li><a href="#metodologia" class="hover:underline">Metodologia</a></li>
+        <li><a href="#missao" class="hover:underline">Missão</a></li>
+        <li><a href="#" class="hover:underline">Blog</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+<script>
+  function setLang(l){ localStorage.setItem('lang', l); location.reload(); }
+  window.addEventListener('DOMContentLoaded', async () => {
+    const lang = localStorage.getItem('lang') || 'pt';
+    document.documentElement.lang = lang;
+    try {
+      const tr = await fetch('./i18n/' + lang + '.json').then(r => r.json());
+      document.querySelectorAll('[data-i18n]').forEach(el => {
+        const k = el.dataset.i18n;
+        if (tr[k]) el.textContent = tr[k];
+      });
+      document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+        const k = el.dataset.i18nPlaceholder;
+        if (tr[k]) el.placeholder = tr[k];
+      });
+    } catch(e) {
+      console.warn('i18n error', e);
+    }
+    AOS.init({ duration: 700, once: true });
+  });
+</script>
 </body>
 </html>
