--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="bg-[#F8F5F0] text-[#0C2A52]">
 
   <!-- Header -->
-  <header class="fixed top-0 w-full z-40 bg-white/90 backdrop-blur-md shadow px-6 py-4 flex items-center justify-between">
-    <a href="#">
+  <header class="fixed top-0 w-full z-50 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
+    <a href="/index.html">
       <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[160px]">
     </a>
     <nav class="hidden md:flex gap-6 text-sm font-semibold">
@@ -30,56 +30,50 @@
   </header>
 
   <!-- Hero -->
-  <section class="pt-32 pb-20 px-6 text-center bg-gradient-to-b from-[#0C2A52] to-[#0C2A52] text-white">
-    <h1 class="text-4xl md:text-5xl font-serif font-semibold leading-tight">Inteligência Jurídica com Propósito</h1>
-    <p class="mt-4 text-lg">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. <br> Teênia, sensibilidade e futuro.</p>
+  <section class="pt-40 pb-20 text-center bg-gradient-to-b from-[#0C2A52] to-[#0C2A52]/90 text-white">
+    <h1 class="text-4xl md:text-5xl font-bold leading-tight">Inteligência Jurídica com Propósito</h1>
+    <p class="mt-4 text-lg max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
   </section>
 
   <!-- Serviços -->
-  <section id="servicos" class="py-16 px-6 bg-[#FDFBF7]">
-    <h2 class="text-3xl font-bold text-center mb-12">Nossos Serviços</h2>
-    <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <div class="bg-white shadow rounded p-6 hover:shadow-md transition" data-aos="fade-up">
-        <h3 class="text-xl font-semibold mb-2">Contratos Empresariais</h3>
-        <p class="text-gray-700 text-sm">Instrumentos jurídicos sob medida para segurança e estratégia nos relacionamentos comerciais.</p>
+  <section id="servicos" class="py-20 px-6 max-w-6xl mx-auto">
+    <h2 class="text-3xl font-semibold text-center mb-12">Nossos Serviços</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition" data-aos="fade-up">
+        <h3 class="font-bold text-lg mb-2">Contratos Empresariais</h3>
+        <p class="text-sm text-gray-700">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
       </div>
-      <div class="bg-white shadow rounded p-6 hover:shadow-md transition" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="text-xl font-semibold mb-2">Planejamento Sucessório</h3>
-        <p class="text-gray-700 text-sm">Organização patrimonial e sucessão harmônica com foco em perenidade familiar.</p>
+      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="font-bold text-lg mb-2">Planejamento Sucessório</h3>
+        <p class="text-sm text-gray-700">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
       </div>
-      <div class="bg-white shadow rounded p-6 hover:shadow-md transition" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="text-xl font-semibold mb-2">Governança Familiar</h3>
-        <p class="text-gray-700 text-sm">Acordos, protocolos e governança intergeracional para proteger o legado familiar.</p>
+      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="font-bold text-lg mb-2">Governança Familiar</h3>
+        <p class="text-sm text-gray-700">Estruturação de acordos, protocolos e governança intergeracional.</p>
       </div>
     </div>
   </section>
 
   <!-- Metodologia -->
-  <section id="metodologia" class="py-16 px-6 bg-[#FFFDFB]">
-    <h2 class="text-3xl font-bold text-center mb-6">Nossa Metodologia</h2>
-    <p class="text-center max-w-3xl mx-auto text-gray-800 text-lg leading-relaxed">
-      Aplicamos a lógica da Base Viva. Especialização, Autoridade, Oportunidade, Dignidade e Ambiência. <br>
-      Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.
-    </p>
+  <section id="metodologia" class="py-20 px-6 bg-[#FDFBF7]">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-3xl font-semibold mb-6">Nossa Metodologia</h2>
+      <p class="text-gray-800 text-lg">Aplicamos a lógica da Base Viva. Especialização, Autoridade, Oportunidade, Dinidade e Ambiência. Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.</p>
+    </div>
   </section>
 
   <!-- Missão -->
-  <section id="missao" class="py-16 px-6 bg-[#FDFBF7]">
-    <h2 class="text-3xl font-bold text-center mb-6">Nossa Missão</h2>
-    <p class="text-center max-w-3xl mx-auto text-gray-800 text-lg leading-relaxed">
-      A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica. Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.
-    </p>
-  </section>
-
-  <!-- Contato -->
-  <section id="contato" class="py-16 px-6 bg-[#0C2A52] text-white">
-    <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-6">Entre em Contato</h2>
-      <form class="grid gap-4">
-        <input type="text" placeholder="Seu nome" class="p-3 rounded text-black">
-        <input type="email" placeholder="Seu e-mail" class="p-3 rounded text-black">
-        <textarea placeholder="Sua mensagem" rows="4" class="p-3 rounded text-black"></textarea>
-        <button class="bg-[#C5A268] text-white py-3 px-6 rounded hover:bg-[#b49252] transition">Enviar</button>
+  <section id="missao" class="py-20 px-6">
+    <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center gap-10">
+      <div class="flex-1">
+        <h2 class="text-3xl font-semibold mb-4">Nossa Missão</h2>
+        <p class="text-gray-800">A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica. Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.</p>
+      </div>
+      <form class="flex-1 bg-white shadow p-6 rounded-lg space-y-4" id="contato">
+        <input type="text" placeholder="Seu nome" class="w-full border border-gray-300 p-2 rounded">
+        <input type="email" placeholder="Seu e-mail" class="w-full border border-gray-300 p-2 rounded">
+        <textarea placeholder="Sua mensagem" class="w-full border border-gray-300 p-2 rounded h-32"></textarea>
+        <button type="submit" class="w-full bg-[#C5A268] text-white py-2 rounded hover:bg-[#b08952] transition">Enviar</button>
       </form>
     </div>
   </section>
@@ -93,16 +87,14 @@
         <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a> • +55 38 98416-4737</p>
       </div>
       <div>
-        <a href="#" class="underline">Voltar ao topo</a>
+        <a href="/blog.html" class="underline">Acessar Blog</a>
       </div>
     </div>
   </footer>
 
-  <!-- WhatsApp flutuante -->
-  <a href="https://wa.me/5538984164737" target="_blank" class="fixed bottom-6 right-6 bg-[#25D366] p-4 rounded-full shadow-lg hover:scale-105 transition z-50">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" width="24" height="24">
-      <path d="M12.04 2.004a10 10 0 0 0-8.93 14.413L2 22l5.75-1.89a9.97 9.97 0 0 0 4.29 1.01h.01A10 10 0 1 0 12.04 2.004Zm5.82 14.19c-.24.68-1.37 1.27-1.87 1.3-.48.03-.99.05-1.6-.1-.37-.1-.84-.27-1.44-.53a11.27 11.27 0 0 1-4.18-3.74c-.56-.75-.99-1.66-1.13-2.28-.11-.48-.01-.9.12-1.24.13-.35.76-1.2 1.05-1.32.27-.1.64-.15 1.03.4.37.55 1.28 1.85 1.38 1.98.11.13.18.3.03.49-.14.2-.21.32-.41.51-.2.2-.43.43-.2.84.24.4 1.06 1.74 2.3 2.36.85.43 1.26.47 1.67.3.4-.17 1.07-.77 1.34-1.53.14-.4.29-.45.49-.45h.42c.24 0 .6.09.71.3.1.2.1 1.16-.2 1.87Z"/>
-    </svg>
+  <!-- WhatsApp -->
+  <a href="https://wa.me/5538984164737" target="_blank" class="fixed bottom-5 right-5 z-50">
+    <img src="/assets/whatsapp-icon.png" alt="WhatsApp" class="h-12 w-12">
   </a>
 
 </body>
