--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,36 +14,38 @@
     });
   </script>
 </head>
-<body class="bg-[#F8F5F0] text-[#0C2A52]">
+
+<body class="bg-[#F8F5F0] text-[#0C2A52] font-sans">
 
   <!-- Header -->
   <header class="fixed top-0 w-full z-40 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
-    <a href="/">
-      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[160px]">
+    <a href="/index.html">
+      <img src="/assets/ma-logo-premium.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[180px]">
     </a>
     <nav class="hidden md:flex gap-6 text-sm font-semibold">
       <a href="/index.html#servicos" class="hover:text-[#C5A268]">Serviços</a>
       <a href="/index.html#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
       <a href="/index.html#missao" class="hover:text-[#C5A268]">Missão</a>
       <a href="/index.html#contato" class="hover:text-[#C5A268]">Contato</a>
-      <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
+      <span class="text-[#C5A268] font-bold">Blog</span>
     </nav>
   </header>
 
+  <!-- Conteúdo principal -->
   <main class="pt-32 px-6 pb-24 max-w-6xl mx-auto">
     <h1 class="text-4xl font-bold mb-12 text-center">Insights Jurídicos</h1>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
 
-      <!-- Post modelo -->
-      <a href="#" class="bg-white rounded-lg shadow hover:shadow-md transition overflow-hidden" data-aos="fade-up">
-        <img src="/assets/placeholder.jpg" alt="Capa do artigo" class="w-full h-48 object-cover">
+      <!-- Post exemplo -->
+      <a href="/posts/planejamento-sucessorio.html" class="bg-white rounded-lg shadow hover:shadow-md transition overflow-hidden" data-aos="fade-up">
+        <img src="/assets/blog/planejamento-sucessorio.jpg" alt="Capa do artigo" class="w-full h-48 object-cover">
         <div class="p-6">
           <h2 class="text-xl font-semibold mb-2">Planejamento Sucessório: por que importa?</h2>
           <p class="text-sm text-gray-700">Organizar a sucessão patrimonial evita conflitos familiares e garante a continuidade dos negócios...</p>
         </div>
       </a>
 
-      <!-- + outros posts podem ser adicionados aqui -->
+      <!-- Outros posts podem ser inseridos aqui -->
 
     </div>
   </main>
@@ -62,4 +65,5 @@
   </footer>
 
 </body>
+
 </html>
